[package]
name = "keypad3"
version = "0.2.0"
edition = "2024"
license = "MIT"
keywords = ["no-std", "embedded-hal-driver", "embedded-hal", "keypad"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A matrix keypad driver with support for any keypad size"
authors = ["Nicolas Kist Steffen"]
readme = "README.md"

[dependencies]
embedded-hal = { version = "1.0" }
