[package]
name = "basic-example"
version = "0.1.0"
authors = ["Nicolas Kist Steffen <nicolasdesenvolvedor@gmail.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "basic-example"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
keypad3 = { path = "../../" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
